deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall-admission-controller
  namespace: heimdall
  labels:
    app: heimdall-admission-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall-admission-controller
  template:
    metadata:
      labels:
        app: heimdall-admission-controller
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1234
      containers:
      - name: server
        image: kryanbeane/heimdall-admission:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
          name: webhook-api
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /run/secrets/tls
          readOnly: true
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: heimdall-admission-controller-tls
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall-admission-controller
  namespace: heimdall
spec:
  selector:
    app: heimdall-admission-controller
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: heimdall-webhook
webhooks:
  - name: heimdall-admission-controller.heimdall.svc
    sideEffects: None
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: heimdall-admission-controller
        namespace: heimdall
        path: "/mutate"
      caBundle: ${CA_PEM_B64}
    rules:
      # Default rules to process updates to native K8s resources
      - operations: [ "UPDATE" ]
        apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        resources: [ "pods" ]
      - operations: [ "UPDATE" ]
        apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        resources: [ "deployments" ]
      - operations: [ "UPDATE" ]
        apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        resources: [ "replicasets" ]
